WINDOWS ONLY: Use an experimental build of mencoder with 720p/1080p H264 content: http://code.google.com/soc/2008/ffmpeg/appinfo.html?csaid=9FD2BF705A5D5DBB
AC3 audio tracks are now remuxed and not reencoded 

- Fixes

Default platform charset issue
Transcode buffer optimization on Windows
A/V sync automatic managment for ISO and MKV+XVID
M4V now streamed by default, you have to enter the #Transcoded# folder to force the transcode (like AVI files)
WMA now transcoded by default
Audio tracks sorted by track number (if present) in media library
Better filenames/subtitles management (m2ts/ts issues, comas, widechars, etc.)
External subtitles not always loaded, again
DVD images are listed in the media library
AviSynth / VideoLAN not always detected on Vista 64bits
Engines exclusion on OSX/Linux
Fixed console mode on Linux

v1.02.1

- New features

OSX build now uses Java 1.5 instead of 1.6 so it should be able to run on more macs

- Fixes

Major Bug in server start due to a faulty MAC address retrieval 
PMS do not start after activating the archive browsing option
Media library small fixes
Subtitles now work by default on OSX

v1.02

- New features

Auto-updater, default configuration, cleanups and windows/linux build scripts (thanks to Tim Cox)
Media library (also act as a parsing cache)
Playlists (m3u/pls) support
Preliminary album art support, better audio (flac) and tags parsing
New options for video resolution, deinterlace filter, and archives browsing
Better video settings with virtual PS3 menu (A/V sync, deinterlace, ...)
Windows service installer (working on 32 bits only)
New image parsing library: Better performance / EXIF support (sort photos by camera model, etc.)
DVR-MS addon

- Fixes

A/V out of sync issues with some ISOs and medias / codecs support improvement (flv, rmvb, hdmov, mp4, multichannels avi, etc.)
External subtitles not always loaded
Upnp advertising issue in search reply to the ps3 (thanks to Daniel Pedersen)